[gd_scene load_steps=10 format=3 uid="uid://eyulnxeeqtvx"]

[ext_resource type="Script" path="res://Characters/base/NPCCharacterBase.gd" id="1_3yddv"]
[ext_resource type="Shader" path="res://NonCharacters/pixelate.gdshader" id="2_45205"]
[ext_resource type="Texture2D" uid="uid://uej0mv5l57im" path="res://assets/—Pngtree—full body robot character with_19287158.png" id="3_hbu8a"]
[ext_resource type="Script" path="res://Characters/base/components/HealthComponent.gd" id="4_rrew2"]
[ext_resource type="Script" path="res://Characters/base/components/NPCMovementComponent.gd" id="5_xbdby"]
[ext_resource type="Script" path="res://Characters/base/components/NPCAttackComponent.gd" id="6_dqr62"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7bbgp"]
shader = ExtResource("2_45205")
shader_parameter/pixel_size = 36

[sub_resource type="SpriteFrames" id="SpriteFrames_a0ly1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_hbu8a")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_b540y"]
radius = 27.0185

[node name="Orc" type="CharacterBody2D" node_paths=PackedStringArray("healthNode", "movementNode", "attackNode")]
collision_layer = 2
collision_mask = 6
script = ExtResource("1_3yddv")
healthNode = NodePath("HealthComponent")
movementNode = NodePath("NPCMovementComponent")
attackNode = NodePath("NPCAttackComponent")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_7bbgp")
scale = Vector2(0.02, 0.02)
sprite_frames = SubResource("SpriteFrames_a0ly1")
animation = &"new_animation"
speed_scale = 2.0

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_b540y")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("4_rrew2")
MAX_HEALTH = 10.0

[node name="NPCMovementComponent" type="Node" parent="."]
script = ExtResource("5_xbdby")
Flying = true

[node name="NPCAttackComponent" type="Node" parent="."]
script = ExtResource("6_dqr62")
damage = 10.0
cooldown = 1.0
isProjectile = true
